--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: Oxygen, sans-serif;
 }
 
 .container {
@@ -31,7 +32,7 @@ body {
     margin-top: 0;
 }
 
-.activity-name {
+.activity-name__fun { /* This class will be added via JavaScript on button-click */
     color: hsla(237deg 94% 33% / 64%);;
 }
 
